Fix alignment in articles, header and footer

--- a/style.scss
+++ b/style.scss
@@ -180,3 +180,9 @@ i {
 .featuresLink:hover {
   background: #eee;
 }
+
+.mobilebar {
+    * {
+        float: left;
+    }
+}
